--- a/puppet.conf
+++ b/puppet.conf
@@ -4,6 +4,7 @@ vardir=/var/lib/puppet
 ssldir=/var/lib/puppet/ssl
 rundir=/var/run/puppet
 factpath=$vardir/lib/facter
+modulepath=/etc/puppet/modules
 
 [master]
 # These are needed when the puppetmaster is run by passenger
